<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/profile_welcomeusername"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/profile_useremail" />
        <TextView
            android:id="@+id/user_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/user_birthdate_label" />
        <TextView
            android:id="@+id/user_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/user_locality_label"
            android:layout_marginBottom="100dp"/>
        <TextView
            android:id="@+id/search_user_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_searchbtn_label"
            android:textColor="@color/black"
            android:text="@string/searchuser_textview_indicator"/>
        <EditText
            android:id="@+id/searchtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text" />
        <Button
            android:id="@+id/btnsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchbtn_text"/>

        <TextView
            android:id="@+id/found_user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/profile_welcomeusername"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/found_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/profile_useremail" />
        <TextView
            android:id="@+id/found_user_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/user_founduserbirthdate" />
        <TextView
            android:id="@+id/found_user_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/user_founduserlocality"
            android:layout_marginBottom="100dp"/>
    </LinearLayout>

</RelativeLayout>