<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainView"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/linearLayout_loginscreen_margintop">

        <TextView
            android:id="@+id/user_username_login_laebel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginscreen_username_label"
            android:textSize="@dimen/loginscreen_usernamelabel_textsize"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/user_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/loginscreen_usernamehint" />

        <TextView
            android:id="@+id/user_password_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginscreen_password_label"
            android:textSize="@dimen/loginscreen_usernamelabel_textsize"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/user_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/loginscreen_passwordhint"/>

        <Button
            android:id="@+id/loginscreen_loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginscreen_loginbtntext"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="15dp"/>

    </LinearLayout>

</RelativeLayout>